--- a/data-science.html
+++ b/data-science.html
@@ -72,14 +72,14 @@
       
 <!--Begin body here --> 
 <h5><a href='https://jobs.lever.co/perpetualabs.com/c39b5cba-1831-428d-8f86-459678459ade'>Perpetua Labs - Data Scientist</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/4zsxmie7jafqhbwun3nwbwsfjy'>Data Scientist | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Costa Mesa, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4495420002'>Job Application for Data Scientist at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4495420002'>Job Application for Data Scientist at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -95,7 +95,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/3FqijwXtN0/Data-Scientist'>Data Scientist - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/3FqijwXtN0/Data-Scientist'>Data Scientist - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -170,7 +170,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/amyris/f441c4f7-cfd7-4097-97be-2c6883decf14'>Amyris - Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amyris/f441c4f7-cfd7-4097-97be-2c6883decf14'>Amyris - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Emeryville, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -182,7 +182,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909750'>Job Application for Graduate Data Scientist at Signifyd</a></h5> 
+<h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909750'>Job Application for Graduate Data Scientist at Signifyd</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -325,7 +325,7 @@ CA.</p>
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o1K29fwG&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n6gglMwe'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o1K29fwG&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n6gglMwe'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -334,7 +334,7 @@ CA.</p>
 <p>Oct 14, 2019 ... ... to our clients and having fun doing it; You design, implement, and optimize 
 data processing workflows, using statistics and machine learning algorithms?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aptiv-mobility/45f87031-1f01-418d-91cd-73a5f02d3cec'>Aptiv-Mobility - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aptiv-mobility/45f87031-1f01-418d-91cd-73a5f02d3cec'>Aptiv-Mobility - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -389,7 +389,7 @@ is?...</p>
 <p>2 days ago ... The Cleveland Indians are seeking a data scientist to join the team's Baseball 
 Research and Development group. The data scientist will use their machine?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
@@ -430,7 +430,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Lausanne, Switzerland  Toronto London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/innovid/jobs/4493544002'>Job Application for Senior Data Scientist  at Innovid</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/innovid/jobs/4493544002'>Job Application for Senior Data Scientist  at Innovid</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
