--- a/data-analyst.html
+++ b/data-analyst.html
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://doxo.recruiterbox.com/jobs/fk01nzn/'>
+<h5><a href='https://doxo.recruiterbox.com/jobs/fk01nzn/'>
     Data Analyst - SEM at doxo
 </a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
@@ -141,7 +141,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zigzag.applytojob.com/apply/L801H9qnkN/Data-Analyst-Sales-Operations'>Data Analyst & Sales Operations - ZigZag Careers - Career Page</a></h5> 
+<h5><a href='http://zigzag.applytojob.com/apply/L801H9qnkN/Data-Analyst-Sales-Operations'>Data Analyst & Sales Operations - ZigZag Careers - Career Page</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -159,7 +159,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hitchcock.referrals.selectminds.com/jobs/healthcare-data-analyst-value-reporting-analytics-ft-days-6815'>Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers</a></h5> 
+<h5><a href='https://hitchcock.referrals.selectminds.com/jobs/healthcare-data-analyst-value-reporting-analytics-ft-days-6815'>Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -223,7 +223,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Edenred/743999698137875-data-analyst-h-f'>Edenred France Data Analyst H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Edenred/743999698137875-data-analyst-h-f'>Edenred France Data Analyst H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France France  France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -258,11 +258,11 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Senior-Data-Integration-Analyst/26369'>Senior Data Integration Analyst - US, MI, Southfield - 26369</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Senior-Data-Integration-Analyst/26369'>Senior Data Integration Analyst - US, MI, Southfield - 26369</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/finix/ecf78eb3-07d4-49bf-b521-316330f11db5'>Finix - Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/finix/ecf78eb3-07d4-49bf-b521-316330f11db5'>Finix - Data Analyst</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -278,7 +278,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">Los Angeles, CA  Los Angeles</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://gensler.wd1.myworkdayjobs.com/genslercareers/job/Washington-DC-US/Data-Analyst---Design-Labs_R-2001'>Data Analyst - Design Labs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gensler.wd1.myworkdayjobs.com/genslercareers/job/Washington-DC-US/Data-Analyst---Design-Labs_R-2001'>Data Analyst - Design Labs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The team is looking to hire a Data Analyst to support the strategic Cost 
 Intelligence initiative. This initiative is focused on collecting and curating the 
@@ -298,7 +298,7 @@ wealth of?...</p>
 reporting needs by analyzing the data and presenting the findings to the 
 organization?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oD9gbfwX&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nWSrlMwR&jvi=oD9gbfwX,Job&jvk=Job'>Medidata Solutions Careers - Senior Business Analyst, Platform Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oD9gbfwX&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nWSrlMwR&jvi=oD9gbfwX,Job&jvk=Job'>Medidata Solutions Careers - Senior Business Analyst, Platform Services</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -306,7 +306,7 @@ organization?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/labineassociates/job/aki57ar6q9a9u1zezm73rgdqny/SeniorDigitalMarketingAnalyst'>Sr Digital marketing data analyst | Job Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/labineassociates/job/aki57ar6q9a9u1zezm73rgdqny/SeniorDigitalMarketingAnalyst'>Sr Digital marketing data analyst | Job Opportunities</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -472,7 +472,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Santa Monica, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://deseretmanagement.wd1.myworkdayjobs.com/en-US/Boncom/job/SLC-Triad-Center/Data-Analyst_R2257'>Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deseretmanagement.wd1.myworkdayjobs.com/en-US/Boncom/job/SLC-Triad-Center/Data-Analyst_R2257'>Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 12, 2019 ... Data Analyst needed to join Boncom. Boncom is an advertising and 
 communications agency. We develop innovative and strategic campaigns both 
